<resources>
    <string name="app_name">DataTool</string>
    <string name="action_settings">服务器设置</string>
    <string name="text_server_port">服务器端口号</string>

    <string name="text_ip">ip</string>
    <string name="text_port">port</string>
    <string name="button_text_clear">清空</string>
    <string name="button_text_send">发送</string>
    <string name="button_text_select_file">选择文件</string>
    <string name="button_text_gateway">路由信息</string>

    <string name="select_dir_title">选择文件夹</string>
    <string name="current_location">当前位置</string>
    <string name="select_dir_up">上一级目录</string>
    <string name="select_dir_create">创建目录</string>
    <string name="select_dir_select">选择目录</string>
    <string name="select_dir_cancle">取消</string>

    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_message">是否真的要退出程序?</string>
    <string name="dialog_title">退出程序提示</string>

    <string name="address_prefix">地址</string>
    <string name="time_prefix">时间</string>

    <string name="system_log">系统日志</string>
</resources>
