<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fp_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/select_dir_title"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#333" />

    <TextView
        android:id="@+id/fp_tv_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:gravity="left"
        android:padding="5dp"
        android:text="@string/current_location"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#333" />

    <LinearLayout
        android:id="@+id/fp_buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5sp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@mipmap/fp_ic_action_up"
            android:focusable="true"
            android:gravity="center"
            android:onClick="goBack"
            android:padding="5dp"
            android:text="@string/select_dir_up"
            android:textColor="#333" />

        <TextView
            android:id="@+id/fp_btn_new"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@mipmap/fp_ic_action_add"
            android:focusable="true"
            android:gravity="center"
            android:onClick="newFolderDialog"
            android:padding="5dp"
            android:text="@string/select_dir_create"
            android:textColor="#333" />

        <TextView
            android:id="@+id/fp_btn_select"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@mipmap/fp_ic_action_back"
            android:focusable="true"
            android:gravity="center"
            android:onClick="select"
            android:padding="5dp"
            android:text="@string/select_dir_select"
            android:textColor="#333" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@mipmap/fp_ic_action_cancel"
            android:focusable="true"
            android:gravity="center"
            android:onClick="cancel"
            android:padding="5dp"
            android:text="@string/select_dir_cancle"
            android:textColor="#333" />

    </LinearLayout>

    <ListView
        android:id="@+id/fp_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
