<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text_ip"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/edit_ip"
            android:layout_width="205dp"
            android:layout_height="40dp"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_port"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/edit_port"
            android:layout_width="73dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="@dimen/text_size_16" />
    </LinearLayout>

    <!--
    使用
      android:focusable="true"
      android:focusableInTouchMode="true"
      使控件失去焦点
      -->
    <EditText
        android:id="@+id/edit_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:background="@drawable/ic_linearlayout_border"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:maxLines="@android:integer/config_longAnimTime" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/button_text_send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_gateway_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_gateway"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_select_file"
            app:layout_constraintStart_toEndOf="@+id/btn_clear"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_select_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_select_file"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_send"
            app:layout_constraintStart_toEndOf="@+id/btn_gateway_info" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_clear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>